--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.0'
     id 'io.spring.dependency-management' version '1.1.4'
-    id 'jacoco'
     id "org.asciidoctor.jvm.convert" version "3.3.2"
 }
 
@@ -33,6 +32,7 @@ dependencies {
 
     //test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
 
     //Lombok
     compileOnly 'org.projectlombok:lombok'
@@ -59,26 +59,12 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-
-jacoco {
-    toolVersion = "0.8.7"
-}
-
 ext {
     snippetsDir = file('build/generated-snippets')
 }
 
 test {
     outputs.dir snippetsDir
-    finalizedBy jacocoTestReport
-}
-
-jacocoTestReport {
-    reports {
-        xml.required = true
-        html.required = true
-        csv.required = false
-    }
 }
 
 clean {
