--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,10 +25,6 @@ management:
           - caches
 ---
 spring:
-  config:
-    activate:
-      on-profile: prod
-
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/ecommerce?serverTimezone=Asia/Seoul
@@ -53,6 +49,11 @@ spring:
     activate:
       on-profile: dev
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/ecommerce?serverTimezone=Asia/Seoul
@@ -70,3 +71,11 @@ spring:
     defer-datasource-initialization: true
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
+
+---
+spring:
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+    producer:
+      bootstrap-servers: localhost:9092
