--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,6 +44,12 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
 
 ---
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.orm.jdbc.bind: trace
+
+---
 spring:
   config:
     activate:
@@ -79,3 +85,9 @@ spring:
       bootstrap-servers: localhost:9092
     producer:
       bootstrap-servers: localhost:9092
+
+---
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.orm.jdbc.bind: trace
