--- a/.github/workflows/deployToEcr.yml
+++ b/.github/workflows/deployToEcr.yml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Set up Logback Environment Variables
+        run: |
+          echo "AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }}" >> $GITHUB_ENV
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
