--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ dependencies {
 
     //guava
     implementation 'com.google.guava:guava:32.1.2-jre'
+
+    // logback
+    implementation 'ca.pjer:logback-awslogs-appender:1.6.0'
 }
 
 tasks.named('test') {
